force-app/main/default/objects/Product2/fields/AssetsRequired__c.field-meta.xml
<CustomField>
    <fullName>AssetsRequired__c</fullName>
    <label>Assets Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cart</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>