force-app/main/default/objects/Product2/fields/BillType__c.field-meta.xml
<CustomField>
    <fullName>BillType__c</fullName>
    <label>Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>