force-app/main/default/objects/Product2/fields/OH_Minutes__c.field-meta.xml
<CustomField>
    <fullName>OH_Minutes__c</fullName>
    <description>Unmanaged</description>
    <label>Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>