force-app/main/default/objects/Product2/fields/Pairing__c.field-meta.xml
<CustomField>
    <fullName>Pairing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pairing</label>
    <type>Checkbox</type>
</CustomField>