force-app/main/default/objects/Product2/fields/PreBillPercent__c.field-meta.xml
<CustomField>
    <fullName>PreBillPercent__c</fullName>
    <label>PreBill %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>